maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:11: error: not found: value get
      while (get.Direction() != Direction.NORTH) {
             ^