maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit()) {
    while (getDirection != Direction.NORTH) {
      gauche()
    }
    while (!estFaceMur) {
      avance()
    }
    if (estFaceMur()) {
      while (get.Direction() != Direction.NORTH) {
        keepHandOnSideWall()
      }
    }
  }
}

def keepHandOnSideWall() = {
  if (!estFaceMur()) {
    gauche()
  }
  while (estFaceMur()) {
    droite()
  }
  avance()
}